Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/SOM_PEConfiguration__c.object-meta.xml
<CustomObject>
    <label>SOM Process Exception Configuration</label>
    <nameField>
        <label>SOM Process Exception Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOM Process Exception Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>