Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/ChatterMessage__c.field-meta.xml
<CustomField>
    <fullName>ChatterMessage__c</fullName>
    <label>Chatter Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>