Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/ConfigurationType__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationType__c</fullName>
    <label>Configuration Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>CustomNotification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>