Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/CustomNotificationMessage__c.field-meta.xml
<CustomField>
    <fullName>CustomNotificationMessage__c</fullName>
    <label>Custom Notification Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>