Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/CustomNotificationTitle__c.field-meta.xml
<CustomField>
    <fullName>CustomNotificationTitle__c</fullName>
    <label>Custom Notification Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>