Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/CustomNotificationTypeId__c.field-meta.xml
<CustomField>
    <fullName>CustomNotificationTypeId__c</fullName>
    <label>Custom Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>