Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/IsPostToRelatedRecordFeedEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsPostToRelatedRecordFeedEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post to Related Record Feed</label>
    <type>Checkbox</type>
</CustomField>