Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/ProcessExceptionCategories__c.field-meta.xml
<CustomField>
    <fullName>ProcessExceptionCategories__c</fullName>
    <description>Comma separated list of categories</description>
    <label>Process Exception Categories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>