Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/ProcessExceptionSeverities__c.field-meta.xml
<CustomField>
    <fullName>ProcessExceptionSeverities__c</fullName>
    <description>Comma separated list of severities</description>
    <label>Process Exception Severities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>