Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/ProcessExceptionStatuses__c.field-meta.xml
<CustomField>
    <fullName>ProcessExceptionStatuses__c</fullName>
    <description>Comma separated list of statuses</description>
    <label>Process Exception Statuses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>