Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <description>Comma separated list of user recipients</description>
    <label>Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>