Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/fields/SalesChannelId__c.field-meta.xml
<CustomField>
    <fullName>SalesChannelId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Channel</label>
    <referenceTo>SalesChannel</referenceTo>
    <relationshipLabel>SOM Process Exception Configurations</relationshipLabel>
    <relationshipName>SOM_Process_Exception_Configurations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>