Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/som-components/process-exception-notification/default/objects/SOM_PEConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>IsEnabled__c</columns>
    <columns>NAME</columns>
    <columns>ConfigurationType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SalesChannelId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>